k8s/istio/greet-istio.yaml

---
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: spring
  name: greet-destination-rule
spec:
  host: greet-service.spring.svc.cluster.local
---

kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: spring
  name: greet-virtual-service
spec:
  http:
    - route:
        - destination:
            host: greet-service.spring.svc.cluster.local
          weight: 100
  hosts:
    - greet-service.spring.svc.cluster.local
---

kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: spring
  name: greet-virtual-service-for-gateway
spec:
  http:
    - route:
        - destination:
            host: greet-service.spring.svc.cluster.local
          weight: 100
  hosts:
    - greet.kube.demo.com # gateway 에서 설정한 hosts 와 매핑
  gateways:
    - spring-kube-demo-gateway
---
